--- a/index.html
+++ b/index.html
@@ -1,75 +1,55 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-        <div class="page" time="2000" transition="fade">
-            <img src="apple-touch-icon-precomposed.png">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+</head>
+<body>
+    <div class="page" time="2000" transition="fade">
+        <img src="apple-touch-icon-precomposed.png">
+    </div>
+    <div class="page" id="websat" time="150" transition="fade">
+        <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg">
+    </div>
+    <div class="page" id="websat2" time="150" transition="fade">
+        <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg">
+    </div>
+    <div class="page" time="3000" transition="fade">
+        <div style="float: right">
+            <img src="http://www.flug-wetter.at/charts/difference_LIPB-LOWI.png" style="max-width: 50%; max-height: 100%">
         </div>
-        
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg">
+        <div style="float: left">
+            <img src="http://www.flug-wetter.at/charts/difference_LOWI-EDDM.png" style="max-width: 50%; float:right">
         </div>
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_22.jpg">
-        </div>
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_20.jpg">
-        </div>
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_18.jpg">
-        </div>
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_16.jpg">
-        </div>
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_14.jpg">
-        </div>
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_12.jpg">
-        </div>
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_10.jpg">
-        </div>
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_08.jpg">
-        </div>
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_06.jpg">
-        </div>
-        <div class="page" time="200" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_04.jpg">
-        </div>
-        <div class="page" time="1000" transition="fade">
-            <img src="http://file.wetter.at/mowis/animationen/websat_02.jpg">
-        </div>
-        <div class="page" time="3000" transition="fade">
-            <iframe src="http://wetter.orf.at/tirol/prognose"></iframe>
-        </div>
-        <div class="page" time="3000" transition="fade">
-            <p>jasodföjasdölkfjsadöfjasdölfjasdöfjasdöklfjöasdfjasdöfsd</p>
-        </div>
+    </div>
+    <div class="page" time="3000" transition="fade">
+        <iframe src="http://wetter.orf.at/tirol/prognose"></iframe>
+    </div>
+    <div class="page" time="2000" transition="fade">
+        <h1>hallo!</h1>
+    </div>
 
 
-
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-    </body>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/site.js"></script>
+</body>
 </html>
