--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <img src="apple-touch-icon-precomposed.png">
     </div>
     <div class="page" id="websat" time="150" transition="fade">
+        <h1>Zamg Satelitenbild</h1>
         <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg">
     </div>
     <div class="page" id="websat2" time="150" transition="fade">
