--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="page" id="websat2" time="150" transition="fade">
         <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg">
-    </div>
+    </div><!--
     <div class="page" time="3000" transition="fade">
         <div style="float: right">
             <img src="http://www.flug-wetter.at/charts/difference_LIPB-LOWI.png" style="max-width: 50%; max-height: 100%">
@@ -38,7 +38,7 @@
         <div style="float: left">
             <img src="http://www.flug-wetter.at/charts/difference_LOWI-EDDM.png" style="max-width: 50%; float:right">
         </div>
-    </div>
+    </div>-->
     <div class="page" time="3000" transition="fade">
         <iframe src="http://wetter.orf.at/tirol/prognose"></iframe>
     </div>
