(really) using the css

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     <div class="page" id="websat" time="150" transition="fade">
         <h1>Zamg Satelitenbild</h1>
         <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg">
-    </div>
-    <div class="page" id="websat2" time="150" transition="fade">
-        <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg">
+        <p>jojo</p>
     </div><!--
     <div class="page" time="3000" transition="fade">
         <div style="float: right">
