--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-    <div class="page" time="2000" transition="fade">
+    <div class="page" time="2000" transition="swipe">
         <img src="apple-touch-icon-precomposed.png">
     </div>
-    <div class="page" id="websat" time="150" transition="fade">
+    <div class="page" id="websat" time="500" transition="fade" transition-time="499">
         <h1>Zamg Satelitenbild</h1>
         <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg">
         <p>jojo</p>
