--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     </head>
     <body>
         <div class="page" time="2000" transition="fade">
-            <img src="apple-touch-icon-precomposed.png">
+            <img src="http://www.wetteralarm.at/uploads/pics/uwz-at_foehn_de.png">
+
+            <img src="http://www.zamg.ac.at/zamgWeb/pict/tawes/tawes_plone_tl_11126_6h.gif">
         </div>
-        
+
         <div class="page" time="200" transition="fade">
             <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg">
         </div>
@@ -61,7 +63,7 @@
             <iframe src="http://wetter.orf.at/tirol/prognose"></iframe>
         </div>
         <div class="page" time="3000" transition="fade">
-            <p>jasodföjasdölkfjsadöfjasdölfjasdöfjasdöklfjöasdfjasdöfsd</p>
+            <iframe src="http://wetter.orf.at/tirol/patscherkofel/"></iframe>
         </div>
 
 
