--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
+        <!-- updated -->
         <meta http-equiv="refresh" content="900; URL=./index.html">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
