--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 		    <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg"><br>
         </div>
 
-        <div class="page" transition="fade">
-            <div class="youtube" data-id="yGD21eAHp9k">
+        <div class="page" transition="swipe">
+            <div class="youtube" data-id="mgfdnAMSGRM">
             </div>
         </div>
-        <div class="page" data-time="3000" transition="fade">
+        <div class="page" data-time="3000" transition="swipe">
             <iframe src="http://wetter.orf.at/tirol/prognose"></iframe>
         </div>
-        <div class="page" data-time="3000" transition="fade">
+        <div class="page" data-time="3000" transition="swipe">
             <iframe src="http://wetter.orf.at/tirol/patscherkofel/"></iframe>
         </div>
         <div class="page" data-time="3000" transition="fade">
