man bringe den spritzwein

--- a/index.html
+++ b/index.html
@@ -17,47 +17,49 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-        <div class="page" data-time="6000" transition="fade">
-            <table width="100%" align="center" border="0">
-                <tr>
-                    <td align="center"><img src="http://www.wetteralarm.at/uploads/pics/uwz-at_foehn_de.png" width="500"></td>
-                    <td align="center"><img src="http://www.zamg.ac.at/zamgWeb/pict/tawes/tawes_plone_ffx,ff,ddx,dd_11126_6h.gif" width="500"></td>
-                </tr>
-                <tr>
-                    <td align="center"><img src="http://www.zamg.ac.at/fix/wetter/bodenkarte/2014/12/26/BK_BodAna_Sat_1412261200.png" width="500"></td>
-                    <td align="center"><img src="http://www.wetterzentrale.de/pics/MS_115470_g05.png" width="500"></td>
-                </tr>
-            </table>
-        </div>
-	    <div class="page" id="websat" data-time="10" transition="fade" transition-time="100">
-		    <h2>Zamg Satelitenbild</h2>
-		    <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg"><br>
-        </div>
+        <div class="loading-screen" id="loading_screen"></div>
+        <div id="main-content" style="display:none">
+            <div class="page" data-time="6000" transition="fade">
+                <table width="100%" align="center" border="0">
+                    <tr>
+                        <td align="center"><img src="http://www.wetteralarm.at/uploads/pics/uwz-at_foehn_de.png" width="500"></td>
+                        <td align="center"><img src="http://www.zamg.ac.at/zamgWeb/pict/tawes/tawes_plone_ffx,ff,ddx,dd_11126_6h.gif" width="500"></td>
+                    </tr>
+                    <tr>
+                        <td align="center"><img src="http://www.zamg.ac.at/fix/wetter/bodenkarte/2014/12/26/BK_BodAna_Sat_1412261200.png" width="500"></td>
+                        <td align="center"><img src="http://www.wetterzentrale.de/pics/MS_115470_g05.png" width="500"></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="page" id="websat" data-time="10" transition="fade" transition-time="100">
+                <h2>Zamg Satelitenbild</h2>
+                <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg"><br>
+            </div>
 
-        <div class="page" transition="swipe">
-            <div class="youtube" data-id="mgfdnAMSGRM">
+            <div class="page" transition="swipe">
+                <div class="youtube" data-id="mgfdnAMSGRM">
+                </div>
+            </div>
+            <div class="page" data-time="3000" transition="swipe">
+                <iframe src="http://wetter.orf.at/tirol/prognose"></iframe>
+            </div>
+            <div class="page" data-time="3000" transition="fade">
+                <iframe src="http://www.flug-wetter.at/bin/medasdb.php?flreq=FXOS42"></iframe>
+            </div>
+            <div class="page" data-time="3000" transition="fade">
+                <h1>Termik</h1>
+                <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg"><br>
+                <br>
+                <img src="http://www.flug-wetter.at/segelflug/Bilder/os_chart_opau.jpg"><br>
+            </div>
+            <div class="page" data-time="3000" transition="fade">
+                <iframe src="http://www.flug-wetter.at/radar/all_inkl/loop_westen.html"></iframe>
             </div>
         </div>
-        <div class="page" data-time="3000" transition="swipe">
-            <iframe src="http://wetter.orf.at/tirol/prognose"></iframe>
-        </div>
-        <div class="page" data-time="3000" transition="swipe">
-            <iframe src="http://wetter.orf.at/tirol/patscherkofel/"></iframe>
-        </div>
-        <div class="page" data-time="3000" transition="fade">
-            <iframe src="http://www.flug-wetter.at/bin/medasdb.php?flreq=FXOS42"></iframe>
-        </div>
-        <div class="page" data-time="3000" transition="fade">
-            <h1>Termik</h1>
-            <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg"><br>
-            <br>
-            <img src="http://www.flug-wetter.at/segelflug/Bilder/os_chart_opau.jpg"><br>
-        </div>
-        <div class="page" data-time="3000" transition="fade">
-            <iframe src="http://www.flug-wetter.at/radar/all_inkl/loop_westen.html"></iframe>
-        </div>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="js/yt.js"></script>
     <script src="js/page.js"></script>
     <script src="js/styler.js"></script>
     <script src="js/main.js"></script>
