--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Wetterseite</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="https://www.youtube.com/iframe_api"></script>
         <script src="js/vendor/require-2.1.17.min.js"></script>
         <script>
             require(["js/main.js"], function(main){
                 require(["js/site.js"]);
             })
         </script>
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <div class="loading-screen" id="loading_screen"></div>
@@ -63,13 +55,5 @@
                 <iframe src="http://www.flug-wetter.at/radar/all_inkl/loop_westen.html"></iframe>
             </div>
         </div>
-        <!--
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/yt.js"></script>
-        <script src="js/page.js"></script>
-        <script src="js/styler.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/site.js"></script>-->
     </body>
-    </html>
+</html>
