html5 video support

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
                     </tr>
                 </table>
             </div>
+
+            <div class="page" data-transition="swipe">
+                <video id="video1" controls="" width="100%">
+                    <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                    <source src="http://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg">
+                    Your browser does not support HTML5 video.
+                </video>
+            </div>
             <div class="page" id="websat" data-time="10" data-transition="fade" data-transition-time="100">
                 <h2>Zamg Satelitenbild</h2>
                 <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg"><br>
