--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
                     </tr>
                 </table>
             </div>
+            <div class="page" data-transition="swipe">
+                <video controls="" width="100%">
+                    <source src="https://download.blender.org/durian/trailer/sintel_trailer-1080p.mp4" type="video/mp4">
+                    <source src="https://download.blender.org/durian/trailer/sintel_trailer-1080p.ogv" type="video/ogg">
+                    Your browser does not support HTML5 video.
+                </video>
+            </div>
+            <div class="page" data-transition="swipe">
+                <video controls="" width="100%">
+                    <source src="https://download.blender.org/durian/trailer/sintel_trailer-720p.mp4" type="video/mp4">
+                    <source src="https://download.blender.org/durian/trailer/sintel_trailer-720p.ogv" type="video/ogg">
+                    Your browser does not support HTML5 video.
+                </video>
+            </div>
 
             <div class="page" data-transition="swipe">
                 <video id="video1" controls="" width="100%">
@@ -51,6 +65,7 @@
                     Your browser does not support HTML5 video.
                 </video>
             </div>
+
             <div class="page" id="websat" data-time="10" data-transition="fade" data-transition-time="100">
                 <h2>Zamg Satelitenbild</h2>
                 <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg"><br>
