--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             -->
         <div id="main-content">
-            <div class="page" data-time="6000" data-transition="fade">
+            <div class="page" data-time="6000" data-transition="swipe">
                 <table width="100%" align="center" border="0">
                     <tr>
                         <td align="center"><img src="http://www.wetteralarm.at/uploads/pics/uwz-at_foehn_de.png" width="500"></td>
@@ -56,7 +56,7 @@
             </div>
             -->
 
-            <div class="page" id="websat" data-time="10" data-transition="fade" data-transition-time="100">
+            <div class="page" id="websat" data-time="10" data-transition="swipe" data-transition-time="100">
                 <h2>Zamg Satelitenbild</h2>
                 <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg"><br>
             </div>
@@ -83,16 +83,16 @@
             <div class="page" data-time="3000" data-transition="swipe">
                 <iframe src="http://wetter.orf.at/tirol/prognose"></iframe>
             </div>
-            <div class="page" data-time="3000" data-transition="fade">
+            <div class="page" data-time="3000" data-transition="swipe">
                 <iframe src="http://seefeld:seefeld@www.flug-wetter.at/bin/medasdb.php?flreq=FXOS42"></iframe>
             </div>
-            <div class="page" data-time="3000" data-transition="fade">
+            <div class="page" data-time="3000" data-transition="swipe">
                 <h1>Termik</h1>
                 <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg"><br>
                 <br>
                 <img src="http://seefeld:seefeld@www.flug-wetter.at/segelflug/Bilder/os_chart_opau.jpg"><br>
             </div>
-            <div class="page" data-time="3000" data-transition="fade">
+            <div class="page" data-time="3000" data-transition="swipe">
                 <div class="resource" data-src="http://wetter.orf.at/tirol/prognose" data-node="#ss-storyText">
 
                 </div>
