--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             -->
 
-            <div class="page" id="websat" data-time="10" data-transition="swipe" data-transition-time="100">
+            <div class="page" id="websat" data-time="10" data-transition="none" data-transition-time="100">
                 <h2>Zamg Satelitenbild</h2>
                 <img src="http://file.wetter.at/mowis/animationen/websat_24.jpg"><br>
             </div>
